--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==3.2.7
+psycopg2==2.9.1
 django-cleanup==5.1.0
 django-cors-headers==3.13.0
 django-heroku==0.3.1
@@ -10,4 +11,3 @@ tzdata==2022.1
 tzlocal==4.2
 uritemplate==4.1.1
 Cython
-psychopg2
